--- a/client/css/overlays/players.css
+++ b/client/css/overlays/players.css
@@ -1,5 +1,3 @@
-#playerOverlay{
-}
 #playerList {
   overflow: auto;
   display: flex;
@@ -22,7 +20,7 @@
   border: none;
   padding: 0;
   margin: 0;
-  color: white;
+  color: var(--VTTblue);
   background: none;
   height: 2em;
   width: auto;
@@ -92,7 +90,6 @@
   order: 4;
   width: 100%;
   text-align: center;
-  color: white;
   display: block;
   line-height: 2em;
   font-size: .8rem;
