changed background of about overlay

--- a/client/css/overlays/about.css
+++ b/client/css/overlays/about.css
@@ -1,6 +1,6 @@
 #aboutOverlay{
   padding: 0;
-  background: rgba(0,0,0,.85);
+  background: var(--roomColor);
   display: flex;
   align-items: center;
   overflow-x: hidden;
