--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -727,6 +727,7 @@ button:disabled:hover {
   justify-content: center;
   align-items: center;
   padding: 10px;
+  background: #0008;
 }
 #buttonInputOverlay h1{
   display: none;
@@ -824,6 +825,9 @@ button:disabled:hover {
 }
 .modal .footer > button label{
   font-size: 1rem;
+}
+.modal .footer > button *{
+  cursor: pointer;
 }
 
 
