Added a few little touches for spacing and usability. The section headers now stick under the searchbar.

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -1,14 +1,13 @@
 #statesOverlay {
   --columns: 5;
   --size: calc((var(--roomWidth) * var(--scale) - 10px) / var(--columns) - 20px);
-  padding: 10px;
-  padding-right: 0;
+  padding: 0;
 }
 
 #stateFilters {
   justify-content: space-between;
   display: flex;
-  padding-right: 10px;
+  padding: 10px;
 }
 
 #stateFilters .material-icons {
@@ -73,19 +72,30 @@
 @media (max-width: 520px), (max-height: 300px) { #statesOverlay { --columns: 2; } }
 
 #statesList .title {
-  clear: left;
-  padding: 40px;
-  padding-bottom: 0;
+  border-top: 1px solid black;
+  border-bottom: 1px solid gray;
+  padding: 10px 15px;
+  position: sticky;
+  top: 0;
+  right: 0;
+  background: white;
+  z-index: 1;
+  margin-top: -1px;
 }
-
-#statesList div:nth-of-type(1) > .title {
-  padding-top: 0;
-  margin-top: 30px;
+#statesList .list {
+  display: inline-block;
+  padding: 0 10px 10px 10px;
+}
+#statesList > div{
+  position: relative;
 }
 
 #addState {
+  position: sticky;
+  top: 10px;
   float: right;
-  margin: -51px 15px 0;
+  z-index: 3;
+  margin: -60px 10px 0 0;
 }
 
 #emptyLibrary {
@@ -106,6 +116,7 @@
 
   box-shadow: 0 2px 10px #00000077;
   margin: 8px;
+  border-radius: 10px;
 }
 
 .roomState > img {
@@ -131,14 +142,14 @@
   font-weight: 700;
   font-size: 1.5rem;
   line-height: 1em;
-  margin: 4px;
+  margin: 8px 8px 4px 8px;
 }
 
 .roomState h4 {
   font-style: italic;
   font-weight: 700;
   font-size: .8rem;
-  margin: 4px;
+  margin: 4px 8px 8px 8px;
 }
 
 .roomState .star {
@@ -208,9 +219,6 @@ div:nth-of-type(1) > .list > .roomState .star {
   display: none;
 }
 
-#stateFilters {
-  margin-bottom: 10px;
-}
 
 @media (max-width: 430px) {
   #addState {
